Misc Fixes to Sizing and Grid Misalignment

--- a/style.css
+++ b/style.css
@@ -1,15 +1,48 @@
-@media screen and (min-width: 0px) and (max-width: 679px){
+*{
+    padding: 0px;
+    border: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+@media screen and (max-width: 679px){
     body{
         background-color:black;
     }
+    companyName{
+        color: beige;
+    }
 }
 @media screen and (min-width: 680px) and (max-width: 959px){
-    body{
-        background-color: green;
-    }
 }
 @media screen and (min-width: 960px){
     body{
-        background-color:beige;
+        background-color:#D9D9D9;
+        width: 100vw;
+        height: 100vh;
+    }
+    .mainPage{
+        width: 100%;
+        height: 100%;    
+    }
+    CompanyName{
+        grid-column: 2;
+        font-size: calc(0.8em + 1vw);
+        text-align: center;
+        vertical-align: middle;
+        line-height: 7vh;
+        overflow: hidden;
+    }
+    .header{
+        width: 100%;
+        height: 15%;
+        display: grid;
+        min-height: 0;
+        min-width: 0;
+        grid-template-columns: 10% 10% 20% 20% 20% 20%;
+        grid-template-rows: 100%;
+        max-height: 100%;
+    }
+    .companyName{
+
     }
 }
